--- a/static/index.html
+++ b/static/index.html
@@ -38,6 +38,97 @@
                 float: left;
                 width: 50%;
             }    
+            #preview {
+                display: block;
+                line-height: 1.5em;
+            }
+            #preview h1, h2 {
+                font-family: "Georgia", serif;
+                font-variant: small-caps;
+                margin-bottom: 0px;
+                padding-bottom: 0.5em;
+            }
+            #preview h1 {
+                font-size: 24pt;
+            }
+            #preview h2 {
+                font-size: 20pt;
+            }
+            #preview ul {
+                margin-top: 0px;
+                margin-bottom: 0.5em;
+            }
+            #preview li {
+                font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, FreeSerif, serif;
+                font-size: 16pt;
+                line-height: 21pt;
+            }
+            #preview p {
+                margin-top: 0px;
+                margin-bottom: 0.5em;
+                text-indent: 2em;
+                font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, FreeSerif, serif;
+                font-size: 16pt;
+                line-height: 21pt;
+            }
+            #preview .download {
+                text-align: center;
+                margin: 1em;
+            }
+            #preview .download a {
+                margin-left: 1em;
+                margin-right: 1em;
+            }
+            [contenteditable="true"].inEditMode {
+                outline-style: auto;
+                outline-width: 3px;
+                outline-color: #111111;
+            }
+            /* ANNOTATIONS */
+            .inEditMode .entity, .inEditMode a[typeof][about] {
+                border-bottom: 1px #729fcf dotted;
+            }
+            .inEditMode .entity.withSuggestions {
+                border-color: #73d216;
+                border-bottom-style: double;
+            }
+            .inEditMode .entity.person, .inEditMode a[typeof][about].person {
+                border-color: #e9b96e;
+            }
+            .inEditMode .entity.place, .inEditMode a[typeof][about].place {
+                border-color: #c17d11;
+            }
+            .inEditMode .entity.organisation, .inEditMode a[typeof][about].organisation {
+                border-color: #8f5902;
+            }
+            a {
+                color: #000000;
+                text-decoration: none;
+                font-weight: bold;
+            }
+            div.hallotoolbar {
+                border: 1px solid #babdb6;
+                padding: 2px;
+                background-color: #eeeeec;
+                border-radius: 6px;
+                font-size: 12pt;
+                line-height: 1.1em;
+                width: 260px;
+                z-index: 500;
+            }
+            div.hallotoolbar .dropdown-menu {
+                width: "200px";
+                background-color: #eeeeec;
+                margin-top: -1px;
+                border-left: 1px solid #babdb6;
+                border-bottom: 1px solid #babdb6;
+                border-right: 1px solid #babdb6;
+                border-bottom-left-radius: 6px;
+                border-bottom-right-radius: 6px;
+            }
+            div.hallotoolbar .dropdown-menu .selected {
+                background-color: #729fcf;
+            }
             #editor {
                 bottom: 0;
                 left: 0;
@@ -198,7 +289,7 @@
 
                     var loaded = 1
                     var pbar = bs_progress('REPL interpreter', 'loading '+lang.language+' interpreter', loaded);
-                    window.jsrepl = new JSREPL({  
+                    window.jsrepl = new JSREPL({
                         progress: $.proxy(function () {pbar.update(++loaded*5)}),
                         timeout: {
                             time: 30000,  
@@ -495,7 +586,7 @@
                 </div>
             </div>
         </header>
-        <section id="overlay">
+        <section id="overlay" class="alert">
             <div id="alert"></div>
             <div id="pbar"></div>
         </section>
