added disabled link and selected link support for menus

--- a/static/index.html
+++ b/static/index.html
@@ -35,6 +35,25 @@
             footer a:hover {
                 color: #ffffff;
             }
+            a.disabled-link,
+            a.disabled-link:visited ,
+            a.disabled-link:active,
+            a.disabled-link:hover {
+                font-style: italic;
+                background-color:#d9d9d9 !important;
+                color:#aaa !important;
+            }
+            a.dropdown-selected,
+            a.dropdown-selected:visited,
+            a.dropdown-selected:active,
+            a.dropdown-selected:hover {
+                font-style: italic;
+                background-color: #0081C2;
+                background-image: linear-gradient(to bottom, #0081CC, #0077B3);
+                background-repeat: repeat-x;
+                color: #ffffff;
+                text-decoration: none;
+            }
             #preview {
                 top: 40px;
                 bottom: 30px;
